# py-wikijs

./: .flake8  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT_READY.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  experiment.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test_runner.py  working_playground.py
.gitea/workflows/: release.yml  test.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml  test.yml
docs/: CHANGELOG.md  CONTRIBUTING.md  GOVERNANCE.md  PIP_INSTRUCTIONS.md  RISK_MANAGEMENT.md  api_reference.md  async_usage.md  compatibility.md  deployment.md  development.md  logging.md  metrics.md  rate_limiting.md  user_guide.md  users_api.md  wikijs_sdk_architecture.md  wikijs_sdk_release_plan.md
docs/plans/: IMPROVEMENT_PLAN.md  IMPROVEMENT_PLAN_2.md
examples/: README.md  async_basic_usage.py  basic_usage.py  batch_operations.py  caching_example.py  content_management.py  users_async.py  users_basic.py
tests/: __init__.py  conftest.py  test_cache.py  test_client.py  test_coverage_boost.py  test_exceptions.py  test_integration.py  test_logging.py  test_metrics.py  test_pagination.py  test_ratelimit.py
tests/aio/: __init__.py  test_async_client.py  test_async_groups.py  test_async_pages.py  test_async_users.py
tests/auth/: __init__.py  test_api_key.py  test_base.py  test_jwt.py
tests/endpoints/: test_assets.py  test_base.py  test_groups.py  test_groups_extended.py  test_pages.py  test_pages_batch.py  test_pages_cache.py  test_users.py
tests/models/: test_asset.py  test_base.py  test_group.py  test_page.py  test_user.py
tests/utils/: test_helpers.py
wikijs/: __init__.py  client.py  exceptions.py  logging.py  metrics.py  ratelimit.py  version.py
wikijs/aio/: __init__.py  client.py
wikijs/aio/endpoints/: __init__.py  assets.py  base.py  groups.py  pages.py  users.py
wikijs/auth/: __init__.py  api_key.py  base.py  jwt.py
wikijs/cache/: __init__.py  base.py  memory.py
wikijs/endpoints/: __init__.py  assets.py  base.py  groups.py  pages.py  users.py
wikijs/models/: __init__.py  asset.py  base.py  group.py  page.py  user.py
wikijs/utils/: __init__.py  helpers.py
